# ScriptedLLM-ChatBot

./: .dockerignore  Dockerfile  README.md  README_RU.md  pyproject.toml
data/: catalog.reg  employees.json  knowledge.json  scenario.yaml
src/aho_bot/: __init__.py  __main__.py  config.py  data.py  domain.py  entities.py  intents.py  llm.py  rag.py  scripted_validator.py  server.py  service.py  storage.py
src/chatbot/: __init__.py  __main__.py  catalog.py  config.py  data.py  domain.py  entities.py  intents.py  langchain_bridge.py  llm.py  prompt_safety.py  rag.py  schemas.py  scripted_validator.py  server.py  service.py  storage.py  workflow.py
static/: app.js  index.html  styles.css
tests/: test_rag_validator.py  test_workflow.py
