[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptedllm-aho-chatbot"
version = "0.1.0"
description = "RAG chatbot prototype for administrative office requests with ScriptedLLM validation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC0-1.0"}
authors = [
    {name = "Nrdrive test prototype"}
]
dependencies = []

[project.optional-dependencies]
scriptedllm = [
    "scriptedllm @ git+https://github.com/gotogrub/ScriptedLLM.git"
]
dev = [
    "pytest>=8.0"
]

[project.scripts]
aho-bot = "aho_bot.server:main"

[tool.setuptools.packages.find]
where = ["src"]
