[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptedllm-chatbot"
version = "0.1.0"
description = "RAG chatbot prototype with LangGraph orchestration and ScriptedLLM validation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC0-1.0"}
authors = [
    {name = "Nrdrive test prototype"}
]
dependencies = [
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
scriptedllm = [
    "scriptedllm @ git+https://github.com/gotogrub/ScriptedLLM.git"
]
dev = [
    "pytest>=8.0"
]

[project.scripts]
chatbot = "chatbot.server:main"

[tool.setuptools.packages.find]
where = ["src"]
